tests/type-errors/invalid_instruction_view_fun.arl
archetype invalid_instruction_view_fun

variable res : nat = 0

asset my_asset {
  a : nat;
  b : string;
}

view g() : nat {
  return 2
}

view f() : unit {
  const p = length("toto");
  const x = g();
  return Unit
}

entry exec () {
  const p = length("toto");
  const x = g();
}
